--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/scada.png" alt="SCADA" />
+        <img src="images/SCADA.png" alt="SCADA" />
         <div class="card-content">
           <h3>SCADA & HMI</h3>
           <p>Supervisory Control and Data Acquisition systems for monitoring and control of critical processes.</p>
