--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <p>Empowering industries with automation, control, and reliable communication systems.</p>
     <div class="offerings">
       <div class="card">
-        <img src="images/plc.png" alt="PLC Systems" />
+        <img src="images/PLC.png" alt="PLC Systems" />
         <div class="card-content">
           <h3>PLC Systems</h3>
           <p>Design, programming, and maintenance of advanced PLC systems for industrial automation.</p>
@@ -130,7 +130,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/rtu.jpg" alt="Industrial Communication" />
+        <img src="images/RTU.jpg" alt="Industrial Communication" />
         <div class="card-content">
           <h3>RTUs & Industrial Communication</h3>
           <p>Reliable RTU solutions and communication networks for industrial control systems.</p>
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="images/networking.png" alt="Networking" />
+        <img src="images/Networking.png" alt="Networking" />
         <div class="card-content">
           <h3>Networking</h3>
           <p>Comprehensive enterprise networking solutions ensuring speed, scalability, and security.</p>
