--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Cyber Solutions Logo" />
+    <img src="Logo.png" alt="Cyber Solutions Logo" />
     <nav>
       <a href="#it">IT Solutions</a>
       <a href="#ot">OT Solutions</a>
